--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,74 +1,143 @@
-
 /*
 ================================================================================
 |                                     HEADER                                   |
 ================================================================================
 */
 body {
-    height: 6000px;
-    background-color: #22314b;
+  height: 6000px;
+  background-color: #22314b;
 }
 
 
 
-  
-  /* The progress container (grey background) */
-  .progress-container-1 {
-    position: fixed;
-    top: 0;
-    z-index: 1;
-    width: 100%;
-    height:30px;
-    .progress-bar {
-        height: 8px;
-        background: #4caf50;
-        width: 0;
-      }
-  
+
+/* The progress container (grey background) */
+.progress-container-1 {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  height: 30px;
+
+  .progress-bar {
+    height: 8px;
+    background: #4caf50;
+    width: 0;
   }
-  .progress-container-2 {
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 65555;
-    width: 50px;
-    height:100%;
-    .progress-bar {
-        background: #4caf50;
-        height: 0;
-      }
-  
+}
+
+.progress-container-2 {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 65555;
+  width: 50px;
+  height: 100%;
+
+  .progress-bar {
+    background: #4caf50;
+    height: 0;
   }
-  
-  /* The progress bar (scroll indicator) */
+
+}
+
+/* The progress bar (scroll indicator) */
+
+.circle {
+  position: fixed;
+  top: 80%;
+  right: -50%;
+  margin: auto;
+  width: 68px;
+  z-index: 666;
+  stroke: #f11834;
+  stroke-dasharray: 201;
+  stroke-dashoffset: 201;
+  transition: stroke-dashoffset .3s;
+  transition: 1s ease;
+  cursor:	pointer;
  
-  .circle {
-      position: fixed;
-      top: 50%;
-      left: 0;
-      right: 0;
-      margin: auto;
-      width: 50px;
-      z-index: 666;
-    
-    stroke: #f11834;
-    stroke-dasharray: 201;
-    stroke-dashoffset: 201;
-    transition: stroke-dashoffset .3s;
+}
+.arrows {
+  position: relative;
+  margin: auto;
+	position: absolute;
+	top: 57%; left: 50%;
+	-webkit-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+        transform: translate(-50%,-50%);
+        width: 30px;
+        height: 35px;
+       
+       
+        .arow {
+          position: absolute;
+          opacity: 0;
+          animation: arrow-animate 1.9s  infinite ease;
+          &:before,  &:after{
+            content: '';
+            position: absolute;
+            width: 16px;
+            margin: auto;
+            border-bottom:2px solid #4caf50;
+            height: 1px;
+            top: 5px;
+            transform: rotate(-30deg);
+          }
+          &:after {
+            transform: rotate(30deg);
+            right: -30px;
+          }
+          &:nth-child(1) {
+            top: 24px;
+            animation-delay:.25s ;
+          }
+          &:nth-child(2) {
+            top: 16px;
+            animation-delay:.5s ;
+          }
+          &:nth-child(3) {
+            top: 8px;
+            animation-delay:.75s;
+          }
+          &:nth-child(4) {
+            top: 0;
+            animation-delay:1s;
+          }
+          &:nth-child(5) {
+            top: -8px;
+            animation-delay:1.25s;
+          }
+          &:nth-child(6) {
+            top: -16px;
+            animation-delay:1.5s;
+          }
+        
+        }     
+}
+
+@keyframes arrow-animate{
+  0% {
+    opacity: 0;
   }
-@media screen and (max-width: 1200px) {
-	
-}
-
-
-@media screen and (max-width: 1024px) {
-
-}
-
-@media screen and (min-width: 768px) and (max-width: 991px) {
-	
-}
-
-@media screen and (max-width: 767px) {
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 0;
+  }
+ 100% {
+    opacity: 0;
+   
+  }
 
 }
+
+@media screen and (max-width: 1200px) {}
+
+
+@media screen and (max-width: 1024px) {}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {}
+
+@media screen and (max-width: 767px) {}
